# raylib-template

./: CMakeLists.txt
src/: main.cpp
